--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Ascend",
+  "name": "Ascend Tracker",
   "short_name": "Ascend",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#020617",
-  "theme_color": "#38bdf8",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
