--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,20 @@
 {
-  "name": "Ascend Tracker",
+  "name": "AscendTracker",
   "short_name": "Ascend",
-  "start_url": "/",
+  "description": "Track your workouts, progress, and more with AscendTracker!",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0f172a",
-  "theme_color": "#0f172a",
+  "theme_color": "#38bdf8",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
