PWA-ready index.html

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "AscendTracker",
   "short_name": "Ascend",
-  "description": "Track your workouts, progress, and more with AscendTracker!",
+  "description": "Track your workouts and progress",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0f172a",
@@ -9,12 +9,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/images/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
